# locust-test

./: locust.conf  pyproject.toml  users.py  usersLoad.scenarios.py
.github/workflows/: tests.yml
reports/users/: users_route_stats.csv  users_route_stats_history.csv
