[tool.poetry]
name = "locust-test"
version = "0.1.0"
description = ""
authors = ["Alef Rodrigues <alefbruno@Outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
locust = "^2.16.1"
faker = "^19.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
